# macCleaner

./: .gitignore  CLAUDE.md  CONCEPTS.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  RULES.md  SECURITY.md  STRATEGY.md  justfile  skills-lock.json
.claude/: settings.json
.claude/hooks/: clippy-after-rs-edit.sh  deny-edit-on-main.sh
.claude/skills/: verify-tui
.codex/: hooks.json
.github/workflows/: ci.yml  release.yml
.impeccable/critique/: 2026-07-05T08-36-47Z__crates-tui.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  clean.rs  doctor.rs  history.rs  mod.rs  orphans.rs  purge.rs  undo.rs  uninstall.rs
crates/core/: Cargo.toml
crates/core/benches/: scan_purge_bench.rs
crates/core/src/: app_resolver.rs  clean_rules.toml  cleaner.rs  doctor.rs  engine.rs  history.rs  lib.rs  models.rs  park_walk.rs  platform.rs  progress.rs  purge_rules.toml  restore.rs  rules.rs  scanner.rs  tree_builder.rs
crates/gui/: .gitignore  Cargo.toml  macos.entitlements  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/gui/frontend/e2e/: analyze.spec.ts  clean.spec.ts  command-palette-actions.spec.ts  command-palette.spec.ts  contract.test.ts  onboarding.spec.ts  orphans.spec.ts  purge.spec.ts  smoke.spec.ts  uninstall.spec.ts
crates/gui/frontend/e2e/support/: fixtures.ts  tauri-mock.ts
crates/gui/frontend/src/: App.svelte  main.ts
crates/gui/frontend/src/lib/: AnalyzeReviewRow.svelte  AttributionTag.svelte  CleanReceipt.svelte  CommandPalette.svelte  ConfirmDelete.svelte  CopyButton.svelte  EvidenceCard.svelte  PathText.svelte  Safety.svelte  Shell.svelte  SkippedNoPermission.svelte  StreamingList.svelte  SummaryHeader.svelte  UndoToast.svelte  aggregate.test.ts  categories.test.ts  categories.ts  confirm.test.ts  confirm.ts  format.test.ts  format.ts  ipc.ts  palette-registry.svelte.ts  palette-registry.test.ts  palette.test.ts  palette.ts  safety.test.ts  safety.ts  toast.test.ts  toast.ts  tokens.css  transition.ts
crates/gui/frontend/src/routes/: Analyze.svelte  Clean.svelte  Onboarding.svelte  Orphans.svelte  Purge.svelte  Uninstall.svelte
crates/gui/src/: lib.rs  main.rs  reporter.rs  slot.rs
crates/gui/src/commands/: analyze.rs  clean.rs  mod.rs  orphans.rs  permission.rs  purge.rs  reveal.rs  trash.rs  undo.rs  uninstall.rs
crates/tui/: Cargo.toml
crates/tui/src/: analyzer_ops.rs  app.rs  command.rs  delete.rs  event.rs  keymap.rs  lib.rs  main.rs  mouse.rs  progress.rs  reporter.rs  theme.rs  throttle.rs  tree_builder.rs
crates/tui/src/ui/: analyzer.rs  chrome.rs  confirm.rs  menu.rs  mod.rs  results.rs  rows.rs  scan.rs  text.rs
docs/: P1-HANDOFF.md
docs/brainstorms/: 2026-06-03-macCleaner-v1-requirements.md  2026-06-04-purge-results-grouping-requirements.md  2026-06-04-purge-scan-perf-requirements.md  2026-06-04-throttle-static-progress-requirements.md  2026-06-05-tui-ux-overhaul-requirements.md  2026-07-05-cleanup-safety-model-requirements.md  2026-07-05-cpu-usage-optimization-requirements.md
docs/ideation/: 2026-06-03-p1-perf-ux-ideation.md  2026-06-04-analyzer-interaction-redesign.md  2026-07-04-tui-interaction-round2.md  2026-07-04-tui-ux-maturity.md  2026-07-05-beat-mole-product-directions.md  2026-07-07-gui-redesign-ideation.md  2026-07-07-gui-redesign-research.md  2026-07-07-next-step-tui-vs-gui.md
docs/plans/: 2026-06-03-001-feat-macCleaner-v1-plan.md  2026-06-03-002-perf-p1-performance-ux-plan.md  2026-06-04-003-feat-analyzer-interaction-polish-plan.md  2026-06-04-004-feat-purge-results-risk-grouping-plan.md  2026-06-04-005-perf-purge-scan-optimization-plan.md  2026-06-05-006-fix-tui-blocking-bugs-plan.md  2026-07-05-007-refactor-cleanup-safety-model-plan.md  2026-07-05-008-fix-tui-ux-round3-trust-chain-plan.md  2026-07-05-009-perf-scan-cpu-optimization-plan.md  2026-07-05-010-perf-park-walker-scan-engine-plan.md  2026-07-06-011-feat-tui-unified-interaction-and-scan-workspace-plan.md  2026-07-06-012-feat-tui-mouse-trackpad-plan.md  2026-07-06-013-chore-worktree-parallel-dev-foundation-plan.md  2026-07-07-014-feat-gui-mvp-scope-plan.md  2026-07-07-014-refactor-tui-lib-split-plan.md  2026-07-08-015-feat-gui-redesign-v1-plan.md  2026-07-08-016-test-gui-e2e-selftest-plan.md  2026-07-09-017-feat-gui-analyze-redesign-v1-plan.md  2026-07-10-018-feat-gui-move6-progressive-disclosure-plan.md  2026-07-11-019-feat-gui-analyze-review-face-plan.md  2026-07-11-020-feat-gui-move7-purge-entry-plan.md  2026-07-12-021-feat-gui-move7-uninstall-plan.md  2026-07-13-022-feat-gui-cmdk-command-palette-plan.md  2026-07-14-023-feat-gui-palette-route-actions-plan.md  2026-07-15-024-feat-cli-undo-restore-plan.md  2026-07-17-025-feat-gui-one-click-undo-plan.md  2026-07-18-026-feat-user-rules-wiring-plan.md  2026-07-19-027-feat-orphan-leftover-scan-plan.md  2026-07-19-028-feat-gui-orphans-entry-plan.md  2026-07-20-002-feat-gui-permission-skip-parity-plan.md  2026-07-21-001-feat-gui-skip-fda-guide-plan.md  2026-07-21-002-refactor-gui-skipped-block-componentize-plan.md  (+1 more)
scripts/: clean-all.sh  clean-worktrees.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+13 files in other folders)
