[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rayon = "1"
jwalk = "0.8"
trash = "5"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
humansize = "2"
indicatif = "0.17"
crossbeam-channel = "0.5"
dirs = "5"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
