[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"
type_complexity = "allow"
needless_pass_by_ref_mut = "allow"
use_debug = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
vec_box = "allow"
unnecessary_debug_formatting = "allow"
ptr_arg = "allow"
cast_sign_loss = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rayon = "1"
jwalk = "0.8"
trash = "5"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
humansize = "2"
indicatif = "0.17"
crossbeam-channel = "0.5"
dirs = "5"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
