[package]
name = "mc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
humansize = { workspace = true }
crossbeam-channel = { workspace = true }
jwalk = { workspace = true }
rayon = { workspace = true }
trash = { workspace = true }
plist = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
